# softshell-eldercare-labs.github.io

./: .gitignore  Cargo.toml  Dioxus.toml  README copy.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: gh_pages.yml
assets/: main.css  style.css  tailwind.css
docs/: index.html
docs/assets/: main-0bd515998f138b5f.css  main-ceabcc04df0066c1.css  main.css  style.css  tailwind.css
docs/wasm/: softshell-eldercare-labs.d.ts  softshell-eldercare-labs.d.ts.br  softshell-eldercare-labs.js  softshell-eldercare-labs.js.br  softshell-eldercare-labs_bg.wasm  softshell-eldercare-labs_bg.wasm.br  softshell-eldercare-labs_bg.wasm.d.ts  softshell-eldercare-labs_bg.wasm.d.ts.br
docs/wasm/snippets/dioxus-interpreter-js-53424282ea002554/: inline0.js  inline0.js.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
public/: tailwind.css
src/: main.rs
