[package]
name = "softshell-eldercare-labs"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-logger = { version = "0.6.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8.19"
include_dir = "0.7.3"
dioxus-motion = { version = "0.2.2", default-features = false, optional = true }
# easer = { version = "0.3.0", default-features = false }

# js-sys = "0.3.77"
# web-sys = {version = "0.3.77", features = [
#     "HtmlElement",
#     "Window",
#     "Document",
#     "Element",
#     "Range",
#     "Selection",
#     "Blob", "Url", "HtmlAnchorElement", "HtmlVideoElement"
#     ]}


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dioxus-motion/desktop"]
mobile = ["dioxus/mobile", "dioxus-motion/desktop"]

[profile.rapid]
inherits = "dev"
opt-level = 1
incremental = true
overflow-checks = false
lto = "thin"
panic = "unwind"
codegen-units = 32



[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
